--- a/src/content/graphos/org/sso/multi-organization.mdx
+++ b/src/content/graphos/org/sso/multi-organization.mdx
@@ -1,6 +1,5 @@
 ---
-title: Use multi-organization SSO
-subtitle: Share SSO between GraphOS organizations
+title: Multi-organization SSO
 ---
 
 <PremiumFeature>
