--- a/src/content/graphos/org/sso/okta-integration-guide.mdx
+++ b/src/content/graphos/org/sso/okta-integration-guide.mdx
@@ -11,7 +11,7 @@ This feature is not available as part of an [Enterprise trial](../plans/#enterpr
 
 <SSOPreviewNotice />
 
-This guide walks through configuring Okta as your Apollo organization's identity provider (IdP) for SSO. Setup requires an Okta account with administrator privileges. Once you've set up your integration, you need to [assign users to it in Okta](#assign-users-in-okta) so they can access GraphOS Studio via SSO.
+This guide walks through configuring Okta as your Apollo organization's identity provider (IdP) for SSO. Once you've set up your integration, you need to [assign users to it in Okta](#assign-users-in-okta) so they can access GraphOS Studio via SSO.
 
 <SSOMigrationNotice />
 
@@ -21,6 +21,8 @@ SSO setup has two main steps:
 
 1. Create a custom Okta app integration for Apollo.
 2. Send your Okta app integration's SAML metadata to Apollo.
+
+Setup requires an Okta account with administrator privileges.
 
 ### Step 1. Create a custom app integration
 
