--- a/src/content/graphos/org/sso/okta-integration-guide.mdx
+++ b/src/content/graphos/org/sso/okta-integration-guide.mdx
@@ -67,7 +67,7 @@ Setup requires an Okta account with administrator privileges.
      - Also check **Use this for Recipient URL and Destination URL**.
    - **Audience URI (SP Entity ID)**: Entity ID provided by Apollo
    - **Default RelayState**: RelayState value provided by Apollo
-   - Leave the default values for other setttings.
+   - Leave the default values for other settings.
 
 7. Still in the **Configure SAML** step, scroll down to **Attribute Statements**. Set values for the following attributes:
 
