--- a/src/content/graphos/org/sso/okta-integration-guide.mdx
+++ b/src/content/graphos/org/sso/okta-integration-guide.mdx
@@ -107,11 +107,9 @@ Setup requires an Okta account with administrator privileges.
 
 3. Send the text file to your Apollo contact. They will complete your SSO setup.
 
-Once your SSO configuration is live, organization members must re-login to GraphOS Studio. Once you've confirmed the new configuration works as expected, remove any legacy Apollo integrations in Okta if you have them.
-
 ## Assign users in Okta
 
-Whether you're using the official Okta integration or creating your own, you need to assign users to it so they can access GraphOS. You can assign individual users or groups by following these steps:
+Once your Apollo integration is set up, you need to assign users to it so they can access GraphOS. You can assign individual users or groups by following these steps:
 
 1. From your Okta Administrator Dashboard, open the **Applications** view from the left menu and open the Apollo GraphOS integration. Then, click the **Assignments** tab.
 
@@ -132,6 +130,8 @@ Whether you're using the official Okta integration or creating your own, you nee
 
 Repeat these steps whenever you want to grant GraphOS Studio access to a new user or group.
 Okta displays every user and group you've assigned to the integration in the **Assignments** tab.
+
+When users are first assigned to the Apollo GraphOS integration, they must re-login to GraphOS Studio. Once you've confirmed the new configuration works as expected, remove any legacy Apollo integrations in Okta if you have them.
 
 ## Legacy setup
 
