--- a/src/content/graphos/org/sso/microsoft-entra-id-integration-guide.mdx
+++ b/src/content/graphos/org/sso/microsoft-entra-id-integration-guide.mdx
@@ -32,7 +32,7 @@ Setup requires administrator privileges.
 3. On the default directory page, select **+Add > Enterprise application**.
 4. In the top menu, select **+Create your own application**.
 5. Enter `Apollo GraphOS` as the name of your app. Below, keep the ** Integrate any other application you don't find in the gallery (Non-gallery)** option selected. Click **Create**.
-6. On the app's **Overview** page, select **2. Set up single sign on**.
+6. On the app's **Overview** page, select **2. Set up single sign-on**.
 7. On the app's **Single sign-on** page, select **SAML** as the single sign-on method.
 8. At the top of the SAML-based Sign-on configuration page, click **Upload metadata file** and upload the file provided by your Apollo contact. Alternatively you can enter these values manually in the **Basic SAML Configuration** section:
 
@@ -50,7 +50,7 @@ Setup requires administrator privileges.
 
    Otherwise, manually enter them.
 
-10. Under **SAML Certificates** copy and **App Federation Metadata Url** for use in the next step.
+10. Under **SAML Certificates** copy the **App Federation Metadata URL** into a text file for use in the next step.
 
 ### Step 2. Send SAML metadata to Apollo
 
