Add entra screenshots

--- a/src/content/graphos/org/sso/multi-organization.mdx
+++ b/src/content/graphos/org/sso/multi-organization.mdx
@@ -40,7 +40,7 @@ To authenticate access to an organization with a shared SSO configuration, you m
 
 <Note>
 
-When this feature reaches [GA](/resources/product-launch-stages#general-availability), it will also support service-provider-initiated (SP-initiated) SSO.
+When this feature reaches [GA](/resources/product-launch-stages#general-availability), it will also support login via service-provider-initiated (SP-initiated) SSO.
 
 </Note>
 
