--- a/src/content/graphos/org/sso/microsoft-entra-id-integration-guide.mdx
+++ b/src/content/graphos/org/sso/microsoft-entra-id-integration-guide.mdx
@@ -31,8 +31,16 @@ Setup requires administrator privileges.
 2. Go to your [Azure Portal](http://portal.azure.com/) and then navigate to **Microsoft Entra ID**.
 3. On the default directory page, select **+Add > Enterprise application**.
 4. In the top menu, select **+Create your own application**.
-5. Enter `Apollo GraphOS` as the name of your app. Below, keep the ** Integrate any other application you don't find in the gallery (Non-gallery)** option selected. Click **Create**.
-6. On the app's **Overview** page, select **2. Set up single sign-on**.
+5. Enter `Apollo GraphOS` as the name of your app. Below, keep the **Integrate any other application you don't find in the gallery (Non-gallery)** option selected. Click **Create**.
+
+   <img
+     src="../../img/sso/entra-create-application.jpg"
+     alt="Application creation in Microsoft Entra ID"
+     className="screenshot"
+     width="700"
+   />
+
+6. On the app's **Overview** page, select **2. Set up single sign-on**. You'll assign users and groups later.
 7. On the app's **Single sign-on** page, select **SAML** as the single sign-on method.
 8. At the top of the SAML-based Sign-on configuration page, click **Upload metadata file** and upload the file provided by your Apollo contact. Alternatively you can enter these values manually in the **Basic SAML Configuration** section:
 
@@ -50,15 +58,31 @@ Setup requires administrator privileges.
 
    Otherwise, manually enter them.
 
+   <img
+     src="../../img/sso/entra-configuration-values.jpg"
+     alt="Application creation in Microsoft Entra ID"
+     className="screenshot"
+     width="700"
+   />
+
 10. Under **SAML Certificates** copy the **App Federation Metadata URL** into a text file for use in the next step.
 
 ### Step 2. Send SAML metadata to Apollo
 
-Send your Apollo contact the **Federation metadata document URL** you previously saved. Your Apollo contact will complete your SSO setup.
+Send your Apollo contact the **pp Federation Metadata URL** you previously copied. Your Apollo contact will complete your SSO setup.
 
 ## Assign users in Entra ID
 
-Once your Apollo application is set up, you need to assign users to it so they can access GraphOS. You can assign individual users or groups from the **User and groups** page of your Apollo application. You may want to begin by adding yourself individually and then testing single sign-on by clicking **Test** at the bottom of the **Single sign-on** page.
+Once your Apollo application is set up in Entra ID, you need to assign users to it so they can access GraphOS. You can assign individual users or groups from the **User and groups** page of your Apollo application in Entra ID.
+
+You may want to begin by adding yourself individually and then testing SSO by clicking **Test** at the bottom of the **Single sign-on** page.
+
+<img
+  src="../../img/sso/entra-sso-test.jpg"
+  alt="SSO testing in Microsoft Entra ID"
+  className="screenshot"
+  width="700"
+/>
 
 Once you've successfully tested your own user's ability to single sign-on, add any applicable users or groups.
 When users are first assigned to the Apollo GraphOS integration, they must re-login to GraphOS Studio. Once you've confirmed the new configuration works for your users, remove any legacy Apollo applications in Entra ID or app registrations in Azure AD if you have them.
