--- a/src/content/shared/sso-saml-info-request.mdx
+++ b/src/content/shared/sso-saml-info-request.mdx
@@ -1,4 +1,6 @@
-1. Send a request to your Apollo contact for Apollo's service provider (SP) SAML information. Include the organization name(s) you are setting SSO up for. Your Apollo contact will respond with the following values:
+1. Send a request to your Apollo contact for Apollo's service provider (SP) SAML information. Include the organization name(s) you are setting SSO up for.
+
+   Your Apollo contact will respond with a URL where you can download Apollo's SP SAML XML metadata file(s) particularly for your organization(s). This file contains the following values:
 
    - Single Sign-on URL
    - Entity ID
